<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="100dp"
    android:orientation="vertical"
    tools:context=".Almost_There"
    android:background="@color/blue">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/almost"
            android:textSize="40dp"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:layout_marginTop="100dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thank"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step"
            android:textAlignment="center"
            android:textColor="@color/white"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/to"
            android:textAlignment="center"
            android:textColor="@color/white"/>

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingHorizontal="20dp"
    android:orientation="vertical"
    android:layout_margin="10dp">
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/custom2"
        android:clickable="true"
        android:textAlignment="center"
        android:text="VERIFY"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="15dp"
        android:layout_marginTop="70dp"
        android:onClick="verify"/>

    </LinearLayout>

</LinearLayout>

    <!--Tanggal Pengerjaan : 28 April 2021-->
    <!--Nim : 10118083-->
    <!--Nama : Tendy Hermansyah-->
    <!--Kelas : IF-2-->