<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Register"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/ic_header">
        </TextView>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@mipmap/ic_header_back"
            android:paddingLeft="20dp">
        </ImageView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="Register"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:paddingVertical="15dp"
            android:paddingHorizontal="90dp">
        </TextView>
    </FrameLayout>

    <EditText
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:text="@string/user" />

    <EditText
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:text="@string/email" />

    <EditText
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/black"
        android:text="@string/num" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:weightSum="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:text="Male"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="20dp"
            android:text="Female" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="1"
        android:paddingHorizontal="20dp">
        <Spinner
            android:id="@+id/spiner1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:autofillHints="Blood Type"
            android:entries="@array/blood"
            android:padding="10dp"/>
        <Spinner
            android:id="@+id/spiner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:autofillHints="Reshus"
            android:entries="@array/reshus"
            android:padding="10dp"/>
    </LinearLayout>


    <EditText
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:text="@string/pass" />
    <EditText
        android:id="@+id/textView9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:text="@string/re"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="0.1"
        android:weightSum="1"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="20dp"
            android:text="Personal"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginRight="20dp"
            android:text="Organization" />
    </LinearLayout>

    <Spinner
        android:id="@+id/spinner4"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:autofillHints="Job"
        android:entries="@array/job"
        android:layout_weight="0.1"/>

    <EditText
        android:id="@+id/textView10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:text="@string/home"/>

    <EditText
        android:id="@+id/textView11"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textSize="18dp"
        android:textColor="@color/black"
        android:text="@string/def"
        android:drawableRight="@mipmap/ic_blood_needed_location"/>

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.1"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="Agree with Terms and Conditions"
        android:checked="true"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:onClick="almost"
        android:text="REGISTER"
        android:background="@drawable/custom_button"/>


</LinearLayout>

    <!--Tanggal Pengerjaan : 28 April 2021-->
    <!--Nim : 10118083-->
    <!--Nama : Tendy Hermansyah-->
    <!--Kelas : IF-2-->