<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Home">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">

        <EditText
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:background="@mipmap/ic_header_profile"
            android:drawableLeft="@mipmap/ic_side_menu"
            android:drawableRight="@mipmap/ic_notification"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="100dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/myCardView"
            android:layout_width="106dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:cardCornerRadius="50dp"
            android:layout_marginBottom="25dp">

            <RelativeLayout
                android:id="@+id/shape_layout"
                android:layout_width="106dp"
                android:layout_height="106dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:background="@drawable/profile">

                <ImageView
                    android:id="@+id/roundedimag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textStyle="bold"
            android:textColor="@color/blue"
            android:textAlignment="center"
            android:textSize="25dp"
            android:layout_marginTop="210dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nim"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="18dp"
            android:layout_marginTop="245dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kelas"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:textSize="18dp"
            android:layout_marginTop="275dp"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/shadow"
        android:layout_marginTop="310dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="320dp"
        android:orientation="horizontal"
        android:weightSum="3"
        android:layout_centerHorizontal="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="75"
            android:textColor="@color/blue"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="100"
            android:textColor="@color/blue"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="330"
            android:textColor="@color/blue"
            android:textSize="30dp"
            android:textStyle="bold"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="360dp"
        android:layout_centerHorizontal="true"
        android:weightSum="3"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="BLOOD GIVE"
            android:textColor="@color/black"
            android:textSize="11dp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="BLOOD RECEIVED"
            android:textColor="@color/black"
            android:textSize="11dp"
            android:textAlignment="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="THANKS"
            android:textColor="@color/black"
            android:textSize="11dp"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:visibility="visible"
        android:background="@color/shadow"
        android:layout_marginTop="390dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:layout_marginTop="395dp">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_search_donor" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_blood_needed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="495dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Search Donor"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Blood Needed"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="513dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Search donor near you"
            android:textStyle="bold"
            android:textSize="11dp"
            android:textColor="@color/shadow"
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4 Users need blood"
            android:textStyle="bold"
            android:textSize="11dp"
            android:textColor="@color/shadow"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:weightSum="2"
        android:layout_marginTop="530dp">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_message" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_donor_history" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="630dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Message"
            android:textStyle="bold"
            android:textSize="18dp"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Donor History"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="18dp"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="2"
        android:layout_marginTop="648dp"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5 New messages"
            android:textStyle="bold"
            android:textSize="11dp"
            android:textAlignment="center"
            android:textColor="@color/shadow"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="5 Gives, 2 Received"
            android:textStyle="bold"
            android:textSize="11dp"
            android:textAlignment="center"
            android:textColor="@color/shadow"/>

    </LinearLayout>

</RelativeLayout>

    <!--Tanggal Pengerjaan : 29 April 2021-->
    <!--Nim : 10118083-->
    <!--Nama : Tendy Hermansyah-->
    <!--Kelas : IF-2-->